--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
   <style>
+
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
+}
  
   </style>
 </head>
@@ -31,7 +37,7 @@
     
     <div class="col-sm-12 text-center">
 
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdR5otY570ibfq7XqmrG9BJ0ULEbRQmXLr0QD3QjweGfW0saw/viewform?embedded=true" width="400" height="1977" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdR5otY570ibfq7XqmrG9BJ0ULEbRQmXLr0QD3QjweGfW0saw/viewform?embedded=true" width="400" height="1977" margin="auto" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
   </div>
 </div>
 
