--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 @media only screen and (max-width: 600px) {
   body {
-    background-color: lightblue;
+    width: 80%;
+    margin: auto;
   }
 }
  
