--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   <style>
 
 @media only screen and (max-width: 600px) {
-  body {
-    width: 80%;
-    margin: auto;
+  .row {
+    width: 90%;
   }
 }
  
