--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ function SubForm (){
   </div> -->
 
   <div style="text-align: center;">
-    <button data-toggle="collapse" data-target="#demo" style="box-shadow: 2px 2px 4px black; color: black; background-color: gold;">Donate</button>
+    <button data-toggle="collapse" data-target="#demo" style="box-shadow: 2px 2px 4px black; color: black; background-color: goldenrod;">Donate</button>
     
   </div>
 
