--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ function SubForm (){
       
       <div class="col-sm-12 text-center" style="background-color: black; color: white; padding: 20px; border-radius: 10px; box-shadow: 2px 2px 8px black;">
         <h2>Subscribe</h2>
+        <p>To Win A White List Spot!</p>
         <br>
         <p>First Name:</p>
             <input type="text" name="first_name" value=" "><br>
