--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ function SubForm (){
 
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html" style="margin: auto;">Home</a>
+      <a class="navbar-brand" href="index.html" style="margin: auto;"><img src="resources/images/home.png" style="width: 30px;" alt=""></a>
       
       </div>
     </div>
@@ -54,9 +54,9 @@ function SubForm (){
 
 
   <div style="text-align: center;">
-    <h4 style="font-weight: bold;">NFTs | Magazine | Minting</h4>
+    <h4 style="font-weight: bold; box-shadow: 2px 2px 8px black; background-color: white; width: fit-content; margin: auto; padding: 5px;">NFTs | Magazine | Minting</h4>
   </div>
- 
+ <br>
   
   
   <!-- <div style="text-align: center;">
@@ -67,7 +67,7 @@ function SubForm (){
   </div> -->
 
   <div style="text-align: center;">
-    <button data-toggle="collapse" data-target="#demo" style="box-shadow: 2px 2px 4px black; color: black; background-color: goldenrod;">Donate</button>
+    <button id="donate" data-toggle="collapse" data-target="#demo" >Donate</button>
     
   </div>
 
