--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <script>
 function SubForm (){
     $.ajax({
-        // url:'https://api.apispreadsheets.com/data/17817/',
+        url:'https://api.apispreadsheets.com/data/oUCAJ0J5sBH8rBMW/',
         type:'post',
         data:$("#myForm").serializeArray(),
     
         success: function(){
-          alert("Order Successfully Submitted! We Will Text You Your ETA")
+          alert("Success!")
         },
         error: function(){
           alert("There was an error :(")
@@ -31,7 +31,7 @@ function SubForm (){
 <body>
 
 
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+  <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container">
       <a class="navbar-brand" href="index.html" style="margin: auto;"><img src="resources/images/home.png" style="width: 30px;" alt=""></a>
       
