--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ function SubForm (){
     });
 }
 </script>
-<link rel="shortcut icon" type="images/logo.png" href="resources/images/studiolab.jpg"/>
+<link rel="shortcut icon" type="images/logo.png" href="resources/images/logo.png"/>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel='stylesheet' href='styles.css'>
 </head>
@@ -111,7 +111,7 @@ function SubForm (){
 
 
   <div class="row align-items-center my-1" style="padding: 0px; margin: auto;">
-    <form method="post" enctype="text/plain" id="myForm" style="margin: auto;">
+    <form action="" method="post" enctype="text/plain" id="myForm" style="margin: auto;">
       
       <div class="col-sm-12 text-center" style="background-color: black; color: white; padding: 20px; border-radius: 10px; box-shadow: 2px 2px 8px black;">
         <h2>Subscribe</h2>
