--- a/index.html
+++ b/index.html
@@ -109,9 +109,11 @@ function SubForm (){
 
   <br>
 
+  
+
 
   <div class="row align-items-center my-1" style="padding: 0px; margin: auto;">
-    <form action="mailto:studiolabnftmarketplace@gmail.com" method="post" enctype="text/plain" id="myForm" style="margin: auto;">
+    <form action="/action_page.php" method="post" enctype="text/plain" id="myForm" style="margin: auto;">
       
       <div class="col-sm-12 text-center" id="myForm" style="background-color: black; color: white; padding: 20px; border-radius: 10px; box-shadow: 2px 2px 8px black;">
         <h2>Subscribe</h2>
