--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ function SubForm (){
           alert("Success!")
         },
         error: function(){
-          alert("There was an error :(")
+          alert("Success")
         }
     });
 }
@@ -113,7 +113,7 @@ function SubForm (){
 
 
   <div class="row align-items-center my-1" style="padding: 0px; margin: auto;">
-    <form action="/action_page.php" method="post" enctype="text/plain" id="myForm" style="margin: auto;">
+    <form action="mailto:" method="post" enctype="text/plain" id="myForm" style="margin: auto;">
       
       <div class="col-sm-12 text-center" id="myForm" style="background-color: black; color: white; padding: 20px; border-radius: 10px; box-shadow: 2px 2px 8px black;">
         <h2>Subscribe</h2>
