--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 
   <div class="row align-items-center my-1" style="padding: 0px; margin: auto;">
-    <form id="myForm" style="text-align: center; margin: auto; border-radius: 10px; background-color: black; color: white; padding: 20px;">
+    <form id="myForm" style="text-align: center; margin: auto; border-radius: 10px; background-color: black; color: white; padding: 20px; box-shadow: 2px 2px 8px black;">
       <label>First Name</label>
       <br/>
       <input name="first_name" />
