--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			});
 		}
 	</script>
-<link rel="shortcut icon" type="images/logo.png" href="resources/images/studiolab.jpg"/>
+<link rel="shortcut icon" type="images/studiolab.jpg" href="resources/images/studiolab.jpg"/>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel='stylesheet' href='styles.css'>
 </head>
@@ -108,10 +108,16 @@
 
   <br>
 
-  
+<div style="margin:auto; width: fit-content; padding: 10px; border-radius: 10px; background-color: black; text-align: center; color: white; box-shadow: 2px 2px 8px black;">
 
+  <h3>Subscribe</h3>
+  <p>To Win a White List Spot!</p>
+</div> 
+
+<br>
 
   <div class="row align-items-center my-1" style="padding: 0px; margin: auto;">
+    
     <form id="myForm" style="text-align: center; margin: auto; border-radius: 10px; background-color: black; color: white; padding: 20px; box-shadow: 2px 2px 8px black;">
       <label>First Name</label>
       <br/>
