--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <div style="margin:auto; width: fit-content; padding: 10px; border-radius: 10px; background-color: black; text-align: center; color: white; box-shadow: 2px 2px 8px black;">
 
   <h3>Subscribe</h3>
-  <p>To Win a White List Spot!</p>
+  <p>To Win A White List Spot!</p>
 </div> 
 
 <br>
